--- a/index.html
+++ b/index.html
@@ -4,15 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/nullstyle.css"> <!-- обнуление стилей -->
+    <title>MY FRUIT!</title>
 </head>
 <body>
-    <div class="e4po4mack">
-        sdkfmsldkfm
-    </div>
-    <div>
-
+    <div class="wrapper"> <!-- контейнер для главной страницы -->
+        <div class="wrapper_header">
+            <div class="header_fr">Фрукты</div>
+            <div class="header_ov">Овощи</div>
+            <div class="header_nb">Наборы</div>
+            <div class="header_menu"><img src="img/Поиск.png" alt=""></div>
+            <div class="header_do">Доставка</div>
+            <div class="header_ak">Акции</div>
+            <div class="header_lk">Личный кабинет</div>
+        </div>
+        <div class="wrapper_body">
+            <img src="img/image 1.png" alt="" class="bg_mango">
+            <div class="body_info">
+                Не можешь забыть наслаждение настоящего манго?
+           </div>
+           <div class="body_title first">
+                СПЕЛЫЕ ФРУКТОВЫЕ
+           </div>
+           <div class="body_title second">
+                БОКСЫ С ДОСТАВКОЙ
+           </div>
+           <div class="choise">
+                ВЫБРАТЬ ФРУКТЫ
+           </div>
+           <img src="img/image 2.png" alt="" class="passion">
+           <img src="img/image 3.png" alt="" class="papa">
+           <div class="papa_info">
+                Этот невероятный аромат спелой папайи
+           </div>
+        </div>
+        <div class="wrapper_sale">
+            <div class="sale_title">
+                Акции
+            </div>
+            <div class="sale_body">
+                <img src="img/sale.png" alt="" class="sale1">
+                <div class="sale_item bonus">
+                    <div class="item_title">Бонус</div>
+                    <div class="item_body">Закрытая группа Telegram - после первого заказа для вас будут действовать специальные цены и акции.</div>
+                </div>
+                <div class="sale_item birthday">
+                    <div class="item_title">Именинник</div>
+                    <div class="item_body">Дарим манго в подарок!
+                        В течение 5 дней до и 2 дней после дня рождения (при заказе от 1000 рублей)</div>
+                </div>
+                <div class="sale_item student">
+                    <div class="item_title">Студент</div>
+                    <div class="item_body">Предъяви свой студенческий и получи 10% на первую покупку. (Не распространяется на акционные товары)</div>
+                </div>
+                <div class="sale_item feedback">
+                    <div class="item_title">Отклик</div>
+                    <div class="item_body">Опубликуйте видео в Instagram и отметьте нас. Получите подарок к следующему заказу!</div>
+                </div>
+                <img src="img/sale.png" alt="" class="sale2">
+            </div>
+            
+        </div>
     </div>
 </body>
 </html>
